see who's going on event popup

--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -81,6 +81,7 @@
         <script src="{% static 'js/hover.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/rsvp-or-cancel.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/delete-event.js' %}" type="text/javascript"></script>
+        <script src="{% static 'js/whos_going.js' %}" type="text/javascript"></script>
     {% endif %}
 {% endblock js %}
 
