ollie temp workspace

--- a/pickup/maps/templates/home_sb.html
+++ b/pickup/maps/templates/home_sb.html
@@ -17,6 +17,7 @@
             <li><a href="{% url 'friends' %}" class="nav link">Friends</a></li>
             <li><p id="profile_sb_link" class="nav link">View Profile</p></li>
             <li><p id="add_event_link" class="nav link">Add an event</p></li>
+            <li><p id="search_events" class="nav link">Search for events</p></li>
         </ul>
     </div>
 {% endblock sidebar-content %}
