--- a/pickup/users/templates/friends/add_friend.html
+++ b/pickup/users/templates/friends/add_friend.html
@@ -15,11 +15,19 @@
         <a href="{% url 'friends' %}" class="nav"> Go to Friend Page </a> <br>
         <p> This is the add friends page </p>
 
-        <form method="post">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <button type="submit" class="btn btn-primary">Add Friend</button>
-        </form>
+        <h2>Search</h2>
+
+        <form method="get" action=".">
+        <table>
+            {{ form.as_table }}
+            <tr>
+                <td>&nbsp;</td>
+                <td>
+                    <input type="submit" value="Search">
+                </td>
+            </tr>
+        </table>
+
     </div>
 
 {% endblock sidebar-content %}
