--- a/pickup/maps/templates/event-search.html
+++ b/pickup/maps/templates/event-search.html
@@ -1,8 +1,15 @@
 {% block sidebar-content %}
     <div id ="testing" class="bodycontent">
-        <p class="nav link home_sb_link">Home</a>
-        <br>
-            
-        <input></input>
+        <p class="nav link home_sb_link" style="margin-bottom: 50px;">Home</a>
+
+   		<div class="container">
+   			<h3>Search</h3>
+   			{% csrf_token %}
+        	<input class="input" id="event-search"></input>
+        	<div class="container" id="event-search-results">
+        		
+        	</div>
+   		</div>	
+
     </div>
 {% endblock sidebar-content %}
