--- a/pickup/maps/templates/event-search.html
+++ b/pickup/maps/templates/event-search.html
@@ -2,12 +2,12 @@
     <div id ="testing" class="bodycontent">
         <p class="nav link home_sb_link" style="margin-bottom: 50px;">Home</a>
 
-   		<div class="container">
+   		<div>
    			{% csrf_token %}
           <div class="active-cyan-3 active-cyan-4 mb-4">
             <input class="form-control" type="text" placeholder="Search" aria-label="Search" id="event-search">
           </div>
-        	<div class="container" id="event-search-results">
+        	<div id="event-search-results">
         	</div>
    		</div>	
 
