corrected url routing from sidebar

--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -24,13 +24,13 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="list-group" id="list-tab" role="tablist">
-                             <p class="list-group-item active border link home_sb_link list-group-item-action" data-toggle="list" role="tab">Home</p>
+                            <p class="list-group-item active border link home_sb_link list-group-item-action" data-toggle="list" role="tab">Home</p>
                             <a href="{% url 'logout' %}" class="border list-group-item link active" role="tab">Logout</a>
-                            <a href="{% url 'password_reset' %}" class="list-group-item link active border" data-toggle="list" role="tab">Reset Password</a>
-                            <a href="{% url 'friends' %}" class="list-group-item link list-group-item-action active border" data-toggle="list" role="tab">Friends</a>
-                            <p id="profile_sb_link" class="list-group-item link home_sb_link list-group-item-action active border" data-toggle="list" role="tab">View Profile</p>
-                            <p id="add_event_link" class="list-group-item link home_sb_link list-group-item-action active border" data-toggle="list" role="tab">Add an event</p>
-                            <p id="search_events" class="list-group-item link home_sb_link list-group-item-action active border" data-toggle="list" role="tab">Search for events</p>
+                            <a href="{% url 'password_reset' %}" class="border list-group-item link active" role="tab">Reset Password</a>
+                            <a href="{% url 'friends' %}" class="list-group-item link list-group-item-action active border" role="tab">Friends</a>
+                            <p id="profile_sb_link" class="list-group-item link home_sb_link list-group-item-action active border" role="tab">View Profile</p>
+                            <p id="add_event_link" class="list-group-item link home_sb_link list-group-item-action active border" role="tab">Add an event</p>
+                            <p id="search_events" class="list-group-item link home_sb_link list-group-item-action active border" role="tab">Search for events</p>
                         </div>
                     </div>
                 </div>
