--- a/pickup/templates/registration/password_reset_form.html
+++ b/pickup/templates/registration/password_reset_form.html
@@ -13,7 +13,7 @@
   <form method="POST">
     {% csrf_token %}
     {{ form|crispy }}
-    <input type="submit" value="Send me instructions!">
+    <input class="btn btn-success" type="submit" value="Send me instructions!">
   </form>
 </div>
 {% endblock %}
