--- a/pickup/maps/templates/ajax-search.html
+++ b/pickup/maps/templates/ajax-search.html
@@ -9,6 +9,12 @@
 		<p>{{ event.event_name }}</p>
 		<p>{{ event.event_descr }}</p>
 		<p>{{ event.location }}</p>
+		<p class="link" id="see-{{ event.id }}">See on map</p>
+		<script type="text/javascript">
+			$("#see-{{ event.id }}").click(function() {
+				map.setCenter([{{ event.lng }}, {{ event.lat }} ]);
+			});
+		</script>
 	</div>
 	{% endfor %}
 
