--- a/pickup/maps/static/css/main.css
+++ b/pickup/maps/static/css/main.css
@@ -3,6 +3,7 @@
 }
 
 .link:hover {
+    text-decoration: underline;
 }
 
 .underline {
@@ -109,5 +110,5 @@
     text-align: center;
     font-family: 'Open Sans', sans-serif;
     background-color:rgb(0, 120, 219);
-    color: white;
+    color: black;
 }
