formatting of popup

--- a/pickup/maps/templates/profile/profile_sb.html
+++ b/pickup/maps/templates/profile/profile_sb.html
@@ -15,6 +15,7 @@
 
         <br>
         <p class="nav link home_sb_link">Home</p>
+        <p class="link" id="profile_edit_link">Edit Profile</p>
         </div>
     </div>
 {% endblock sidebar-content %}
