--- a/pickup/maps/templates/whos-going.html
+++ b/pickup/maps/templates/whos-going.html
@@ -1,13 +1,13 @@
 {% block sidebar-content %}
     <div id ="testing" class="bodycontent">
-        <p class="nav link home_sb_link">Home</a>
+        <div class="home_sb_link btn btn-primary" style="margin-bottom: 5%">Home</div>
         <br>
         
         <!-- All users going to an event -->
         <div class="card">
-            <ul class="list-group list-group-flush">        
+            <ul class="list-group">        
             {% for user in users_going %}
-                <li class="list-group-item">{{ user.first_name }} {{ user.last_name }}</li>
+                <li class="list-group-item btn-warning active">{{ user.first_name }} {{ user.last_name }}</li>
             {% endfor %}
             </ul>
         </div>  
