--- a/pickup/maps/templates/home_sb.html
+++ b/pickup/maps/templates/home_sb.html
@@ -15,12 +15,12 @@
             <div class="col-12">
                 <div class="list-group list-group-flush">
                     <p class="list-group-item border home_sb_link btn btn-primary" role="tab">Home</p>
-                    <a href="{% url 'logout' %}" class="border list-group-item btn btn-primary" role="tab">Logout</a>
                     <a href="{% url 'password_reset' %}" class="border list-group-item btn btn-primary" role="tab">Reset Password</a>
-                    <a href="{% url 'friends' %}" class="list-group-item btn btn-primary border" role="tab">Friends</a>
                     <p id="profile_sb_link" class="list-group-item btn btn-primary border" role="tab">View Profile</p>
+                    <p id="friends_sb_link" class="list-group-item btn btn-primary border" role="tab">View Friends</p>
                     <p id="add_event_link" class="list-group-item btn btn-primary border" role="tab">Add an event</p>
                     <p id="search_events" class="list-group-item btn btn-primary border" role="tab">Search for events</p>
+                    <a href="{% url 'logout' %}" class="border list-group-item btn btn-primary" role="tab">Logout</a>
                 </div>
             </div>
         </div>
