--- a/pickup/maps/static/css/main.css
+++ b/pickup/maps/static/css/main.css
@@ -7,6 +7,12 @@
     width: 100%;
 }
 
+.btn-warning {
+    background-color: #0000cc;
+    color: white;
+    width: 100%;
+}
+
 .btn-primary:hover {
     background-color: #3399ff;
 }
@@ -32,7 +38,7 @@
     height: 100%;
     top: 0;
     left: 0;
-    overflow: scroll;
+    overflow: auto;
     border-right: 1px solid rgba(0, 0, 0, 0.25);
 }
 
