--- a/pickup/maps/templates/home_sb.html
+++ b/pickup/maps/templates/home_sb.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-12">
                 <div class="list-group list-group-flush">
-                    <p class="list-group-item border home_sb_link btn btn-primary" role="tab">Home</p>
+                    <p class="list-group-item border home_sb_link btn btn-primary" role="tab"><b>Home</b></p>
                     <a href="{% url 'logout' %}" class="border list-group-item btn btn-primary" role="tab">Logout</a>
                     <a href="{% url 'password_reset' %}" class="border list-group-item btn btn-primary" role="tab">Reset Password</a>
                     <a href="{% url 'friends' %}" class="list-group-item btn btn-primary border" role="tab">Friends</a>
