--- a/pickup/maps/templates/profile/profile_edit.html
+++ b/pickup/maps/templates/profile/profile_edit.html
@@ -3,17 +3,27 @@
     {% load crispy_forms_tags %}
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
-    <!-- Profile Information -->
-    <div id='profile' class='bodycontent'>
-        <a href="{% url 'maps' %}">Home</a>
-        <br>
-        <p> This is the Edit Profile Page</p>
+    <div class='container'>
+        <div class="row">
+            <div class="col text-center text-light">
+                <h3 style="font-family: courier;">Edit Profile</h3>
+            </div>
+        </div>
+    </div>  
 
+    <!-- Profile Information -->
+    <div class="container">
+        {% load crispy_forms_tags %}
         <form method="post">
+            <a name="edit-profile"></a>
             {% csrf_token %}
-            {{ form.as_p }}
+            {% if field == "username" %}
+                {{ form.username|as_crispy_field }}
+            {% elif field == "first_name" or field == "last_name" %}
+                {{ form.first_name|as_crispy_field }}
+                {{ form.last_name|as_crispy_field }}
+            {% endif %}
             <button type="submit">Submit</button>
         </form>
-        <br>
     </div>
 {% endblock sidebar-content %}
