completed View Profile - can dynamically change username, first/last name

--- a/pickup/maps/static/css/main.css
+++ b/pickup/maps/static/css/main.css
@@ -1,3 +1,12 @@
+#hint_id_username {
+    font-weight: bold;
+    font-color: black;
+}
+
+small {
+    color: red;
+}
+
 .btn {
     white-space: normal; 
 }
