--- a/pickup/maps/templates/profile/profile_edit.html
+++ b/pickup/maps/templates/profile/profile_edit.html
@@ -1,6 +1,6 @@
 {% block sidebar-content %}
-    {% load static %}
     {% load crispy_forms_tags %}
+    {% load static %}
         <link rel="stylesheet" href="{% static 'css/main.css' %}">
 
     <div class='container'>
@@ -11,19 +11,48 @@
         </div>
     </div>  
 
+    <p class="border home_sb_link btn btn-primary">Home</p>
+
     <!-- Profile Information -->
     <div class="container">
         {% load crispy_forms_tags %}
         <form method="post">
-            <a name="edit-profile"></a>
             {% csrf_token %}
             {% if field == "username" %}
                 {{ form.username|as_crispy_field }}
-            {% elif field == "first_name" or field == "last_name" %}
+                            {% elif field == "first_name" or field == "last_name" %}
                 {{ form.first_name|as_crispy_field }}
                 {{ form.last_name|as_crispy_field }}
             {% endif %}
-            <button type="submit">Submit</button>
+            <button id="edit-profile-button" class="btn btn-success border" type="submit">Submit</button>
         </form>
     </div>
+
+    <img src="{% static 'pixel.png' %}" onload='
+        $("#id_username").keyup(function () {
+            var username = $(this).val();
+            $.ajax({
+                url: "users/ajax/validate_username/",
+                data: {
+                "username": username
+                },
+                dataType: "json",
+                success: function (data) {
+                    if (data.is_taken) {
+                        document.getElementById("hint_id_username").innerHTML = "Already taken!";
+                        document.getElementById("edit-profile-button").disabled = true;
+                    }
+                    else {
+                        document.getElementById("hint_id_username").innerHTML = "Required. 150 characters or fewer. Letters, digits and @/./+/-/_ only.";
+                        document.getElementById("edit-profile-button").disabled = false;
+                    }
+                },
+                error: function() {
+                    console.log("something went wrong");
+                }
+            });
+        });    
+    '></img>
+    
+
 {% endblock sidebar-content %}
