--- a/pickup/maps/templates/profile/profile_edit.html
+++ b/pickup/maps/templates/profile/profile_edit.html
@@ -25,6 +25,7 @@
                 {{ form.last_name|as_crispy_field }}
             {% endif %}
             <button id="edit-profile-button" class="btn btn-success border" type="submit">Submit</button>
+            <p id="profile_sb_link" class="list-group-item btn btn-primary border" role="tab">Return</p>
         </form>
     </div>
 
