--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -27,7 +27,7 @@
                             <p class="list-group-item border home_sb_link btn btn-primary" role="tab">Home</p>
                             <a href="{% url 'password_reset' %}" class="border list-group-item btn btn-primary" role="tab">Reset Password</a>
                             <p id="profile_sb_link" class="list-group-item btn btn-primary border" role="tab">View Profile</p>
-                            <p id="friends_sb_link" class="list-group-item btn btn-primary border" role="tab">View Friends</p>
+                            <p id="friends_sb_link" class="list-group-item btn btn-primary border" role="tab">Friends</p>
                             <p id="add_event_link" class="list-group-item btn btn-primary border" role="tab">Add an event</p>
                             <p id="search_events" class="list-group-item btn btn-primary border" role="tab">Search for events</p>
                             <a href="{% url 'logout' %}" class="border list-group-item btn btn-primary" role="tab">Logout</a>
