--- a/pickup/maps/templates/friends/friends_sb.html
+++ b/pickup/maps/templates/friends/friends_sb.html
@@ -9,7 +9,7 @@
         <div class="text-center" style="margin-top: 10%">
 
         <p> This is the maps friends page </p>
-        <a href="{% url 'add_friend' %}" class="nav" > Add a friend</a> <br>
+        <a href="{% url 'search_users' %}" class="nav" > Add a friend</a> <br>
         <a href="{% url 'view_friend_requests' %}" class="nav" > View friend requests</a> <br>
         <a href="{% url 'view_friends' %}" class="nav" >  View friends</a> <br>
         <a href="{% url 'remove_friend' %}" class="nav" > Remove friend</a>
