--- a/pickup/users/templates/friends/add_friend.html
+++ b/pickup/users/templates/friends/add_friend.html
@@ -18,15 +18,37 @@
         <h2>Search</h2>
 
         <form method="get" action=".">
+
         <table>
             {{ form.as_table }}
             <tr>
                 <td>&nbsp;</td>
                 <td>
-                    <input type="submit" value="Search">
+                    <input type="submit">
                 </td>
             </tr>
         </table>
+        </form>
+
+            {% if query %}
+            <h3>Users</h3>
+            {{ count }}
+
+            {% for user in query %}
+                <p>
+                    Name: {{user.first_name}} {{ user.last_name}} Username: {{ user.username }}
+                    <a href ="{% url 'add_friend' pk=user.pk %}">
+                    <button type="button" class="btn btn-primary">Add Friend</button>
+                    </a>
+
+                </p>
+            {% empty %}
+                <p>No results found.</p>
+            {% endfor %}
+
+        {% else %}
+            {# Show some example queries to run, maybe query syntax, something else? #}
+        {% endif %}
 
     </div>
 
