--- a/pickup/users/templates/friends/friends_page.html
+++ b/pickup/users/templates/friends/friends_page.html
@@ -14,7 +14,7 @@
     <div id='friends' class="bodycontent">
         <p> This is the friends page </p>
         <a class="nav link home_sb_link">Home</a> <br>
-        <a href="{% url 'add_friend' %}" class="nav" > Add a friend</a> <br>
+        <a href="{% url 'search_users' %}" class="nav" > Search for Friends</a> <br>
         <a href="{% url 'view_friend_requests' %}" class="nav" > View friend requests</a> <br>
         <a href="{% url 'view_friends' %}" class="nav" >  View friends</a> <br>
         <a href="{% url 'remove_friend' %}" class="nav" > Remove friend</a>
