--- a/pickup/maps/templates/event-search.html
+++ b/pickup/maps/templates/event-search.html
@@ -1,11 +1,11 @@
 {% block sidebar-content %}
     <div id ="testing" class="bodycontent">
-        <p class="nav link home_sb_link" style="margin-bottom: 50px;">Home</a>
+        <p class="border home_sb_link btn btn-primary">Home</p>
 
    		<div>
    			{% csrf_token %}
           <div class="active-cyan-3 active-cyan-4 mb-4">
-            <input class="form-control" type="text" placeholder="Search" aria-label="Search" id="event-search">
+            <input class="form-control" type="text" placeholder="Search by name, description, or location" aria-label="Search" id="event-search">
           </div>
         	<div id="event-search-results">
         	</div>
