--- a/pickup/maps/templates/testing.html
+++ b/pickup/maps/templates/testing.html
@@ -6,4 +6,19 @@
 <body>
 	<input id="input"></input>
 </body>
+
+
+<link href = "https://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css"
+         rel = "stylesheet">
+<script src = "https://code.jquery.com/jquery-1.10.2.js"></script>
+<script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+      
+<!-- Javascript -->
+<script>
+	$(function() {
+		$("#input").datepicker();
+    	$("#input").datepicker("show");
+	});
+</script>
+
 </html>
