--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -20,6 +20,8 @@
                 </div>
             </div>
 
+ 
+
             <div class="container">
                 <div class="row">
                     <div class="col-12">
@@ -88,6 +90,9 @@
         <script src="{% static 'js/whos_going.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/load-event-search.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/friends_sb.js' %}" type="text/javascript"></script>
+        <script> $('sidebar').on('focus',".datepicker_recurring_start", function(){
+                $(this).datepicker();
+            });</script>
     {% endif %}
 {% endblock js %}
 
