disabled edit profile feature

--- a/pickup/maps/templates/profile/profile_sb.html
+++ b/pickup/maps/templates/profile/profile_sb.html
@@ -17,10 +17,10 @@
                 <div class="col-12">
                     <div class="list-group list-group-flush">
                         <p class="list-group-item border home_sb_link btn btn-warning" role="tab"><b>Home</b></p>
-                        <p class="edit-profile-link list-group-item border btn btn-warning" id="profile-username" role="tab"><b>Username:</b> {{ user.username }}</p>
-                        <p class="edit-profile-link list-group-item border btn btn-warning" role="tab" id="profile-first_name"><b>First Name:</b> {{ user.first_name }}</p>
-                        <p class="edit-profile-link list-group-item border btn btn-warning" role="tab" id="profile-last_name"><b>Last Name:</b> {{ user.last_name }}</p>
-                        <p class="edit-profile-link list-group-item border btn btn-warning" role="tab" id="profile-email"><b>Email:</b> {{ user.email }}</p>
+                        <p class="list-group-item border btn btn-warning" id="profile-username" role="tab"><b>Username:</b> {{ user.username }}</p>
+                        <p class="list-group-item border btn btn-warning" role="tab" id="profile-first_name"><b>First Name:</b> {{ user.first_name }}</p>
+                        <p class="list-group-item border btn btn-warning" role="tab" id="profile-last_name"><b>Last Name:</b> {{ user.last_name }}</p>
+                        <p class="list-group-item border btn btn-warning" role="tab" id="profile-email"><b>Email:</b> {{ user.email }}</p>
                     </div>
                 </div>
             </div>
