--- a/pickup/maps/templates/home_sb.html
+++ b/pickup/maps/templates/home_sb.html
@@ -18,6 +18,7 @@
                     <a href="{% url 'password_reset' %}" class="border list-group-item btn btn-primary" role="tab">Reset Password</a>
                     <p id="profile_sb_link" class="list-group-item btn btn-primary border" role="tab">View Profile</p>
                     <p id="friends_sb_link" class="list-group-item btn btn-primary border" role="tab">Friends</p>
+                    <p id="upcoming" class="list-group-item btn btn-primary border" role="tab">View My Upcoming Events</p>
                     <p id="add_event_link" class="list-group-item btn btn-primary border" role="tab">Add an event</p>
                     <p id="search_events" class="list-group-item btn btn-primary border" role="tab">Search for events</p>
                     <a href="{% url 'logout' %}" class="border list-group-item btn btn-primary" role="tab">Logout</a>
