--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -30,6 +30,7 @@
                             <a href="{% url 'password_reset' %}" class="border list-group-item btn btn-primary" role="tab">Reset Password</a>
                             <p id="profile_sb_link" class="list-group-item btn btn-primary border" role="tab">View Profile</p>
                             <p id="friends_sb_link" class="list-group-item btn btn-primary border" role="tab">Friends</p>
+                            <p id="upcoming" class="list-group-item btn btn-primary border" role="tab">View My Upcoming Events</p>
                             <p id="add_event_link" class="list-group-item btn btn-primary border" role="tab">Add an event</p>
                             <p id="search_events" class="list-group-item btn btn-primary border" role="tab">Search for events</p>
                             <a href="{% url 'logout' %}" class="border list-group-item btn btn-primary" role="tab">Logout</a>
@@ -90,6 +91,7 @@
         <script src="{% static 'js/whos_going.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/load-event-search.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/friends_sb.js' %}" type="text/javascript"></script>
+        <script src="{% static 'js/upcoming.js' %}" type="text/javascript"></script>
         <script> $('sidebar').on('focus',".datepicker_recurring_start", function(){
                 $(this).datepicker();
             });</script>
