--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -89,6 +89,7 @@
         <script src="{% static 'js/rsvp-or-cancel.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/delete-event.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/whos_going.js' %}" type="text/javascript"></script>
+        <script src="{% static 'js/friends_going.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/load-event-search.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/friends_sb.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/upcoming.js' %}" type="text/javascript"></script>
