changed name to meet-up and changed sidebar styling

--- a/pickup/maps/templates/profile/profile_sb.html
+++ b/pickup/maps/templates/profile/profile_sb.html
@@ -7,7 +7,7 @@
         <div class='container'>
             <div class="row">
                 <div class="col text-center text-light">
-                    <h3 style="font-family: courier;">My Profile</h3>
+                    <h3 style="font-family: courier; margin-top: 5%">My Profile</h3>
                 </div>
             </div>
         </div>
