--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -1,7 +1,7 @@
 <!-- templates/main.html -->
 {% extends 'base.html' %}
 
-{% block title %}Pickup{% endblock title %}
+{% block title %}meet-up{% endblock title %}
 
 {% block content %}
     {% if user.is_authenticated %}
@@ -15,7 +15,7 @@
             <div class='container'>
                 <div class="row">
                     <div class="col text-center text-light">
-                        <h2 style="font-family: courier;">Pickup</h2>
+                        <h2 style="font-family: courier; margin-top: 5%">meet-up</h2>
                     </div>
                 </div>
             </div>
