--- a/pickup/maps/templates/home_sb.html
+++ b/pickup/maps/templates/home_sb.html
@@ -5,7 +5,7 @@
     <div class='container'>
         <div class="row">
             <div class="col text-center text-light">
-                <h2 style="font-family: courier;">Pickup</h2>
+                <h2 style="font-family: courier; margin-top: 5%">meet-up</h2>
             </div>
         </div>
     </div>
