--- a/pickup/maps/static/css/main.css
+++ b/pickup/maps/static/css/main.css
@@ -40,7 +40,7 @@ small {
 }
 
 .sidebar {
-    background-color: rgb(105,155,196);
+    background-color: rgb(90, 90, 90);
     position: absolute;
     bottom: 0;
     width: 25%;
