--- a/pickup/maps/templates/friends/friends_sb.html
+++ b/pickup/maps/templates/friends/friends_sb.html
@@ -23,7 +23,7 @@
                         <a href="{% url 'view_friend_requests' %}" class="nav" > View friend requests</a> <br>
                         <a href="{% url 'view_friends' %}" class="nav" >  View friends</a> <br>
                         <a href="{% url 'remove_friend' %}" class="nav" > Remove friend</a>
-                        <p id="friends_view_link" class="list-group-item btn btn-primary border" role="tab">View Friends</p>
+                        <p id="friends_view_site" class="list-group-item btn btn-primary border" role="tab">View Friends</p>
                         <p id="friends_add_link" class="list-group-item btn btn-primary border" role="tab">Add Friends</p>
                         <p id="friends_remove_link" class="list-group-item btn btn-primary border" role="tab">Remove Friends</p>
                         <p id="friends_requests_link" class="list-group-item btn btn-primary border" role="tab">View Friend Requests</p>
