--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -38,7 +38,7 @@
       </div>
     </div>
     <div class="text-center">
-      <a href="{% url 'password_reset' %}">Forgot Password?</a><br>    
+      <!-- <a href="{% url 'password_reset' %}">Forgot Password?</a><br>     -->
     </div>
 
     <div class="col-md-12 text-center" style="margin-top:1%;">
