--- a/pickup/maps/templates/friends/friends_add.html
+++ b/pickup/maps/templates/friends/friends_add.html
@@ -1,37 +1,21 @@
-{% block sidebar-content %}
-    {% load crispy_forms_tags %}
-    {% load friendshiptags %}
-    {% load static %}
-        <link rel="stylesheet" href="{% static 'css/main.css' %}">
+<div class="container">
+<div class="row">
+<div class="col-12">
+<div class="list-group">
+{% if friends.count > 0 %}
 
-    <!-- Friends Information -->
-        <div class='container'>
-            <div class="row">
-                <div class="col text-center text-light">
-                    <h3 style="font-family: courier;">My Friends</h3>
-                </div>
-            </div>
-        </div>
+	{% for friend in friends %}
+	<div class="list-group-item border">
+		<p>{{ friend.username }}</p>
+        <p>{{ friend.first_name }}</p>
+        <p>{{ friend.last_name }}</p>
+	</div>
+	{% endfor %}
 
-        <div class="container">
-            <div class="row">
-                <div class="col-12">
-                    <div class="list-group list-group-flush">
-                        <p class="list-group-item border home_sb_link btn btn-warning" role="tab"><b>Home</b></p>
-                        <h2>Search </h2>
-                        <form method="get" action=".">
-                        <table>
-                            {{ form.as_table }}
-                            <tr>
-                                <td>
-                                    <input type="submit" value="Search">
-                                </td>
-                            </tr>
-                        </table>
-                        <p id="friends_sb_link" class="list-group-item btn btn-primary border" role="tab">Return</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-{% endblock sidebar-content %}
+{% else %}
+	<li class="list-group-item text-danger">No results</li>
+{% endif %}
+</div>
+</div>
+</div>
+</div>
