removed redundant buttons on friends sidebar

--- a/pickup/maps/templates/friends/friends_sb.html
+++ b/pickup/maps/templates/friends/friends_sb.html
@@ -17,9 +17,9 @@
                     <div class="list-group list-group-flush">
                         <p class="list-group-item border home_sb_link btn btn-warning" role="tab"><b>Home</b></p>
                         <br>
-                        <a href="{% url 'search_users' %}" class="nav" > Add a friend</a> <br>
+                        <!-- <a href="{% url 'search_users' %}" class="nav" > Add a friend</a> <br>
                         <a href="{% url 'view_friend_requests' %}" class="nav" > View friend requests</a> <br>
-                        <a href="{% url 'remove_friend' %}" class="nav" > Remove friend</a>
+                        <a href="{% url 'remove_friend' %}" class="nav" > Remove friend</a> -->
                         <p id="friends_view_site" class="list-group-item btn btn-primary border" role="tab">View Friends</p>
                         <p id="search_friends" class="list-group-item btn btn-primary border" role="tab">Add Friends</p>
                         <p id="friends_requests_site" class="list-group-item btn btn-primary border" role="tab">Friend Requests</p>
