removed redundant stuff in friends sidebar

--- a/pickup/maps/templates/friends/friends_sb.html
+++ b/pickup/maps/templates/friends/friends_sb.html
@@ -23,7 +23,7 @@
                         <p id="friends_view_site" class="list-group-item btn btn-primary border" role="tab">View Friends</p>
                         <p id="search_friends" class="list-group-item btn btn-primary border" role="tab">Add Friends</p>
                         <p id="friends_requests_site" class="list-group-item btn btn-primary border" role="tab">Friend Requests</p>
-                        <p id="friends_remove_link" class="list-group-item btn btn-primary border" role="tab">Remove Friends</p>
+<!--                         <p id="friends_remove_link" class="list-group-item btn btn-primary border" role="tab">Remove Friends</p> -->
                     </div>
                 </div>
             </div>
