heroku html changes

--- a/pickup/maps/templates/add-event.html
+++ b/pickup/maps/templates/add-event.html
@@ -5,7 +5,7 @@
 
 
     <div id ="testing" class="bodycontent" >
-        <p class="border home_sb_link btn btn-primary">Home</p>
+        <p class="border home_sb_link btn btn-home">Home</p>
         <br>
 
         {%  if event_form %}
