--- a/pickup/maps/templates/upcoming.html
+++ b/pickup/maps/templates/upcoming.html
@@ -1,6 +1,6 @@
 {% block sidebar-content %}
     <div id ="testing" class="bodycontent">
-        <p class="border home_sb_link btn btn-primary">Home</p>
+        <p class="border home_sb_link btn btn-home">Home</p>
         <div>
             <div id="upcoming-events">
                 <!-- Fill this with results -->
