--- a/pickup/maps/static/css/main.css
+++ b/pickup/maps/static/css/main.css
@@ -7,17 +7,23 @@ small {
     color: red;
 }
 
+.btn-home {
+    background-color: #eeb60e;
+    color: white;
+    width: 100%;
+}
+
 .btn {
     white-space: normal; 
 }
 
 .btn-primary {
-    background-color: #0000cc;
+    background-color: #FFFFFF;
     width: 100%;
 }
 
 .btn-warning {
-    background-color: #0000cc;
+    background-color: #607D8B;
     color: white;
     width: 100%;
 }
@@ -40,7 +46,6 @@ small {
 }
 
 .sidebar {
-    background-color: rgb(90, 90, 90);
     position: absolute;
     bottom: 0;
     width: 25%;
@@ -78,7 +83,18 @@ small {
     display: inline-block;
     text-align: center;
     font-size: 14px;
-    color: white;
+    color: black;
+}
+
+.title {
+    font-family: Baskerville;
+    font-size: xx-large;
+    margin-top: 5%;
+     display: block;
+    font-size: 1.17em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .heading {
