--- a/pickup/maps/templates/home_sb.html
+++ b/pickup/maps/templates/home_sb.html
@@ -4,8 +4,8 @@
 {% block sidebar-content %}
     <div class='container'>
         <div class="row">
-            <div class="col text-center text-light">
-                <h2 style="font-family: courier; margin-top: 5%">meet-up</h2>
+            <div class="col text-center text-dark">
+                        <h2 style="font-family: Baskerville; margin-top: 5%">Meet-up</h2>
             </div>
         </div>
     </div>
@@ -13,14 +13,14 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="list-group list-group-flush">
+                <div class="list-group body" class="bodycontent">
                     <p class="list-group-item  home_sb_link btn" role="tab">Home</p>
                     <p id="profile_sb_link" class="list-group-item btn" role="tab">View Profile</p>
                     <p id="friends_sb_link" class="list-group-item btn" role="tab">Friends</p>
                     <p id="upcoming" class="list-group-item btn" role="tab">View My Upcoming Events</p>
                     <p id="add_event_link" class="list-group-item btn" role="tab">Add an event</p>
                     <p id="search_events" class="list-group-item btn" role="tab">Search for events</p>
-                    <a href="{% url 'logout' %}" class=" list-group-item" role="tab">Logout</a>
+                    <a href="{% url 'logout' %}" class=" list-group-item btn" role="tab">Logout</a>
                 </div>
             </div>
         </div>
