--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -14,26 +14,23 @@
             {% block sidebar-content %}
             <div class='container'>
                 <div class="row">
-                    <div class="col text-center text-light">
-                        <h2 style="font-family: courier; margin-top: 5%">meet-up</h2>
+                    <div class="col text-center text-dark">
+                        <h2 style="font-family: Baskerville; margin-top: 5%">Meet-up</h2>
                     </div>
                 </div>
             </div>
-
- 
 
             <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <div class="list-group list-group-flush">
-                            <p class="list-group-item border home_sb_link btn btn-primary" role="tab">Home</p>
-                            <a href="{% url 'password_reset' %}" class="border list-group-item btn btn-primary" role="tab">Reset Password</a>
-                            <p id="profile_sb_link" class="list-group-item btn btn-primary border" role="tab">View Profile</p>
-                            <p id="friends_sb_link" class="list-group-item btn btn-primary border" role="tab">Friends</p>
-                            <p id="upcoming" class="list-group-item btn btn-primary border" role="tab">View My Upcoming Events</p>
-                            <p id="add_event_link" class="list-group-item btn btn-primary border" role="tab">Add an event</p>
-                            <p id="search_events" class="list-group-item btn btn-primary border" role="tab">Search for events</p>
-                            <a href="{% url 'logout' %}" class="border list-group-item btn btn-primary" role="tab">Logout</a>
+                            <p class="list-group-item home_sb_link btn" role="tab">Home</p>
+                            <p id="profile_sb_link" class="list-group-item btn" role="tab">View Profile</p>
+                            <p id="friends_sb_link" class="list-group-item btn" role="tab">Friends</p>
+                            <p id="upcoming" class="list-group-item btn" role="tab">View My Upcoming Events</p>
+                            <p id="add_event_link" class="list-group-item btn" role="tab">Add an event</p>
+                            <p id="search_events" class="list-group-item btn" role="tab">Search for events</p>
+                            <a href="{% url 'logout' %}" class="list-group-item btn" role="tab">Logout</a>
                         </div>
                     </div>
                 </div>
