--- a/pickup/maps/templates/home_sb.html
+++ b/pickup/maps/templates/home_sb.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <div class="list-group body" class="bodycontent">
+                <div class="list-group body list-group-flush">
                     <p class="list-group-item  home_sb_link btn" role="tab">Home</p>
                     <p id="profile_sb_link" class="list-group-item btn" role="tab">View Profile</p>
                     <p id="friends_sb_link" class="list-group-item btn" role="tab">Friends</p>
