fixed search js

--- a/pickup/templates/registration/login.html
+++ b/pickup/templates/registration/login.html
@@ -37,9 +37,9 @@
         {{ form.password|as_crispy_field }}
       </div>
     </div>
-    <div class="text-center">
+<!--     <div class="text-center">
       <a href="{% url 'password_reset' %}">Forgot Password?</a><br>    
-    </div>
+    </div> -->
 
     <div class="col-md-12 text-center" style="margin-top:1%;">
       <button class='btn btn-success text-center' type="submit">Login</button>
