--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -14,8 +14,8 @@
             {% block sidebar-content %}
             <div class='container'>
                 <div class="row">
-                    <div class="col text-center text-dark">
-                        <h2 style="font-family: Baskerville; margin-top: 5%">Meet-up</h2>
+                    <div class="col text-center">
+                        <h2 style="font-family: Baskerville; margin-top: 5%; color:#ea7400">Meet-up</h2>
                     </div>
                 </div>
             </div>
