--- a/pickup/maps/templates/friends/friends_add_site.html
+++ b/pickup/maps/templates/friends/friends_add_site.html
@@ -1,6 +1,6 @@
 {% block sidebar-content %}
     <div id ="testing" class="bodycontent">
-        <p class="border home_sb_link btn btn-primary">Home</p>
+        <p class="border home_sb_link btn btn-home">Home</p>
 
    		<div>
    			{% csrf_token %}
@@ -9,7 +9,8 @@
           </div>
         	<div id="friend_search_results">
         	</div>
-   		</div>	
+   		</div>
+        <br>
     <p id="friends_sb_link" class="list-group-item btn btn-primary border" role="tab">Return</p>
     </div>
 {% endblock sidebar-content %}
