--- a/pickup/maps/templates/friends/friends_requests_site.html
+++ b/pickup/maps/templates/friends/friends_requests_site.html
@@ -1,11 +1,12 @@
 {% block sidebar-content %}
     <div id ="testing" class="bodycontent">
-        <p class="border home_sb_link btn btn-primary">Home</p>
+        <p class="border home_sb_link btn btn-home">Home</p>
         <div>
             <div id="friends_requests">
                 <!-- Fill this with results -->
             </div>
         </div>
+        <br>
      <p id="friends_sb_link" class="list-group-item btn btn-primary border" role="tab">Return</p>
     </div>
 {% endblock sidebar-content %}
