--- a/pickup/maps/templates/whos-going.html
+++ b/pickup/maps/templates/whos-going.html
@@ -1,6 +1,6 @@
 {% block sidebar-content %}
     <div id ="testing" class="bodycontent">
-        <div class="home_sb_link btn btn-primary" style="margin-bottom: 5%">Home</div>
+        <div class="home_sb_link btn btn-home" style="margin-bottom: 5%">Home</div>
         <br>
         
         <!-- All users going to an event -->
