--- a/pickup/maps/templates/friends/friends_add.html
+++ b/pickup/maps/templates/friends/friends_add.html
@@ -2,13 +2,13 @@
 <div class="row">
 <div class="col-12">
 <div class="list-group">
-{% if friends.count > 0 %}
+{% if users.count > 0 %}
 
-	{% for friend in friends %}
+	{% for user in users %}
 	<div class="list-group-item border">
-		<p>{{ friend.username }}</p>
-        <p>{{ friend.first_name }}</p>
-        <p>{{ friend.last_name }}</p>
+		<p>{{ user.username }}</p>
+        <p>{{ user.first_name }}</p>
+        <p>{{ user.last_name }}</p>
 	</div>
 	{% endfor %}
 
