--- a/pickup/maps/templates/ajax-search.html
+++ b/pickup/maps/templates/ajax-search.html
@@ -2,6 +2,7 @@
 <div class="row">
 <div class="col-12">		
 <div class="list-group">
+{% if events|length > 0 %}
 	{% for event in events %}
 	<div class="list-group-item border">
 		<p>{{ event.event_name }}</p>
