link class added

--- a/pickup/maps/templates/home_sb.html
+++ b/pickup/maps/templates/home_sb.html
@@ -14,13 +14,13 @@
         <div class="row">
             <div class="col-12">
                 <div class="list-group body list-group-flush">
-                    <p class="list-group-item  home_sb_link btn-side" role="tab">Home</p>
-                    <p id="profile_sb_link" class="list-group-item btn-side" role="tab">View Profile</p>
-                    <p id="friends_sb_link" class="list-group-item btn-side" role="tab">Friends</p>
-                    <p id="upcoming" class="list-group-item btn-side" role="tab">View My Upcoming Events</p>
-                    <p id="add_event_link" class="list-group-item btn-side" role="tab">Add an event</p>
-                    <p id="search_events" class="list-group-item btn-side" role="tab">Search for events</p>
-                    <a href="{% url 'logout' %}" class=" list-group-item btn-side" role="tab">Logout</a>
+                    <p class="list-group-item home_sb_link btn-side link" role="tab">Home</p>
+                    <p id="profile_sb_link" class="list-group-item btn-side link" role="tab">View Profile</p>
+                    <p id="friends_sb_link" class="list-group-item btn-side link" role="tab">Friends</p>
+                    <p id="upcoming" class="list-group-item btn-side link" role="tab">View My Upcoming Events</p>
+                    <p id="add_event_link" class="list-group-item btn-side link" role="tab">Add an event</p>
+                    <p id="search_events" class="list-group-item btn-side link" role="tab">Search for events</p>
+                    <a href="{% url 'logout' %}" class="list-group-item btn-side link" role="tab">Logout</a>
                 </div>
             </div>
         </div>
