--- a/pickup/maps/templates/friends/friends_add.html
+++ b/pickup/maps/templates/friends/friends_add.html
@@ -10,6 +10,7 @@
         <p>{{ user.first_name }}</p>
         <p>{{ user.last_name }}</p>
 	</div>
+	<button id='send-to-{{user.username}}' class='btn btn-primary send'>Send friend request</button>
 	{% endfor %}
 
 {% else %}
