--- a/pickup/maps/templates/friends/friends_requests.html
+++ b/pickup/maps/templates/friends/friends_requests.html
@@ -5,7 +5,8 @@
 {% if friend_requests|length > 0 %}
     {% for request in friend_requests %}
     <div class="list-group-item border">
-        <p>{{ request.from_user.username }}</p>
+        <p>{{ request.from_user.first_name }} {{ request.from_user.last_name }}</p>
+        <button class='btn btn-primary accept'>Accept</button>
     </div>
     {% endfor %}
 
