--- a/pickup/templates/main.html
+++ b/pickup/templates/main.html
@@ -91,6 +91,7 @@
         <script src="{% static 'js/friends_sb.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/upcoming.js' %}" type="text/javascript"></script>
         <script src="{% static 'js/send-req.js' %}" type="text/javascript"></script>
+        <script src="{% static 'js/accept-req.js' %}" type="text/javascript"></script>
         <script> $('sidebar').on('focus',".datepicker_recurring_start", function(){
                 $(this).datepicker();
             });</script>
